exports[`test alternative button 1`] = `
<button
  data-radium={true}
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onMouseEnter={[Function]}
  onMouseLeave={[Function]}
  style={
    Object {
      "alignItems": "flex-start",
      "background": "#ffa500",
      "border": "1px solid #ffa500",
      "borderRadius": "6px",
      "boxSizing": "border-box",
      "color": "#fff",
      "cursor": "pointer",
      "display": "inline-block",
      "fontFamily": "\'Proxima Nova\', \'Lucida Sans Unicode\', \'Lucida Grande\', sans-serif",
      "fontSize": "14px",
      "fontWeight": undefined,
      "height": "32px",
      "letterSpacing": "0.03em",
      "lineHeight": "2.285",
      "margin": "0",
      "padding": "0 1em",
      "textAlign": "center",
      "textShadow": "none",
      "transition": "all 0.5s linear 0ms",
      "whiteSpace": "no-wrap",
    }
  }>
  Click me
</button>
`;

exports[`test basic alternative button 1`] = `
<button
  data-radium={true}
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onMouseEnter={[Function]}
  onMouseLeave={[Function]}
  style={
    Object {
      "alignItems": "flex-start",
      "background": "#fff",
      "border": "1px solid #030303",
      "borderRadius": "6px",
      "boxSizing": "border-box",
      "color": "#030303",
      "cursor": "pointer",
      "display": "inline-block",
      "fontFamily": "\'Proxima Nova\', \'Lucida Sans Unicode\', \'Lucida Grande\', sans-serif",
      "fontSize": "14px",
      "fontWeight": undefined,
      "height": "32px",
      "letterSpacing": "0.03em",
      "lineHeight": "2.285",
      "margin": "0",
      "padding": "0 1em",
      "textAlign": "center",
      "textShadow": "none",
      "transition": "all 0.5s linear 0ms",
      "whiteSpace": "no-wrap",
    }
  }>
  Click me
</button>
`;

exports[`test basic button 1`] = `
<button
  data-radium={true}
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onMouseEnter={[Function]}
  onMouseLeave={[Function]}
  style={
    Object {
      "alignItems": "flex-start",
      "background": "#00ffff",
      "border": "1px solid #00ffff",
      "borderRadius": "6px",
      "boxSizing": "border-box",
      "color": "#fff",
      "cursor": "pointer",
      "display": "inline-block",
      "fontFamily": "\'Proxima Nova\', \'Lucida Sans Unicode\', \'Lucida Grande\', sans-serif",
      "fontSize": "14px",
      "fontWeight": undefined,
      "height": "32px",
      "letterSpacing": "0.03em",
      "lineHeight": "2.285",
      "margin": "0",
      "padding": "0 1em",
      "textAlign": "center",
      "textShadow": "none",
      "transition": "all 0.5s linear 0ms",
      "whiteSpace": "no-wrap",
    }
  }>
  Click me
</button>
`;

exports[`test button can be disabled 1`] = `
<button
  data-radium={true}
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onMouseEnter={[Function]}
  onMouseLeave={[Function]}
  style={
    Object {
      "alignItems": "flex-start",
      "background": "#fff",
      "border": "1px solid rgba(0,0,0,0)",
      "borderRadius": "6px",
      "boxSizing": "border-box",
      "color": "rgba(3,3,3,0.3)",
      "cursor": "not-allowed",
      "display": "inline-block",
      "fontFamily": "\'Proxima Nova\', \'Lucida Sans Unicode\', \'Lucida Grande\', sans-serif",
      "fontSize": "14px",
      "fontWeight": undefined,
      "height": "32px",
      "letterSpacing": "0.03em",
      "lineHeight": "2.285",
      "margin": "0",
      "padding": "0 1em",
      "textAlign": "center",
      "textShadow": "none",
      "transition": "all 0.5s linear 0ms",
      "whiteSpace": "no-wrap",
    }
  } />
`;

exports[`test important button 1`] = `
<button
  data-radium={true}
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onMouseEnter={[Function]}
  onMouseLeave={[Function]}
  style={
    Object {
      "alignItems": "flex-start",
      "background": "#f99643",
      "border": "1px solid #f99643",
      "borderRadius": "6px",
      "boxSizing": "border-box",
      "color": "#fff",
      "cursor": "pointer",
      "display": "inline-block",
      "fontFamily": "\'Proxima Nova\', \'Lucida Sans Unicode\', \'Lucida Grande\', sans-serif",
      "fontSize": "14px",
      "fontWeight": undefined,
      "height": "32px",
      "letterSpacing": "0.03em",
      "lineHeight": "2.285",
      "margin": "0",
      "padding": "0 1em",
      "textAlign": "center",
      "textShadow": "none",
      "transition": "all 0.5s linear 0ms",
      "whiteSpace": "no-wrap",
    }
  }>
  Click me
</button>
`;

exports[`test it can be resized 1`] = `
<button
  data-radium={true}
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onMouseEnter={[Function]}
  onMouseLeave={[Function]}
  style={
    Object {
      "alignItems": "flex-start",
      "background": "#fff",
      "border": "1px solid #030303",
      "borderRadius": "6px",
      "boxSizing": "border-box",
      "color": "#030303",
      "cursor": "pointer",
      "display": "inline-block",
      "fontFamily": "\'Proxima Nova\', \'Lucida Sans Unicode\', \'Lucida Grande\', sans-serif",
      "fontSize": "10.5px",
      "fontWeight": undefined,
      "height": "24px",
      "letterSpacing": "0.03em",
      "lineHeight": "2.285",
      "margin": "0",
      "padding": "0 1em",
      "textAlign": "center",
      "textShadow": "none",
      "transition": "all 0.5s linear 0ms",
      "whiteSpace": "no-wrap",
    }
  } />
`;

exports[`test special button 1`] = `
<button
  data-radium={true}
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onMouseEnter={[Function]}
  onMouseLeave={[Function]}
  style={
    Object {
      "alignItems": "flex-start",
      "background": "#030303",
      "border": "1px solid #030303",
      "borderRadius": "6px",
      "boxSizing": "border-box",
      "color": "#fff",
      "cursor": "pointer",
      "display": "inline-block",
      "fontFamily": "\'Proxima Nova\', \'Lucida Sans Unicode\', \'Lucida Grande\', sans-serif",
      "fontSize": "14px",
      "fontWeight": undefined,
      "height": "32px",
      "letterSpacing": "0.03em",
      "lineHeight": "2.285",
      "margin": "0",
      "padding": "0 1em",
      "textAlign": "center",
      "textShadow": "none",
      "transition": "all 0.5s linear 0ms",
      "whiteSpace": "no-wrap",
    }
  }>
  Click me
</button>
`;

exports[`test standard button 1`] = `
<button
  data-radium={true}
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onMouseEnter={[Function]}
  onMouseLeave={[Function]}
  style={
    Object {
      "alignItems": "flex-start",
      "background": "#fff",
      "border": "1px solid #030303",
      "borderRadius": "6px",
      "boxSizing": "border-box",
      "color": "#030303",
      "cursor": "pointer",
      "display": "inline-block",
      "fontFamily": "\'Proxima Nova\', \'Lucida Sans Unicode\', \'Lucida Grande\', sans-serif",
      "fontSize": "14px",
      "fontWeight": undefined,
      "height": "32px",
      "letterSpacing": "0.03em",
      "lineHeight": "2.285",
      "margin": "0",
      "padding": "0 1em",
      "textAlign": "center",
      "textShadow": "none",
      "transition": "all 0.5s linear 0ms",
      "whiteSpace": "no-wrap",
    }
  }>
  Click me
</button>
`;

exports[`test standard button 2`] = `
<button
  data-radium={true}
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onMouseEnter={[Function]}
  onMouseLeave={[Function]}
  style={
    Object {
      "alignItems": "flex-start",
      "background": "#fff",
      "border": "1px solid #030303",
      "borderRadius": "6px",
      "boxSizing": "border-box",
      "color": "#030303",
      "cursor": "pointer",
      "display": "inline-block",
      "fontFamily": "\'Proxima Nova\', \'Lucida Sans Unicode\', \'Lucida Grande\', sans-serif",
      "fontSize": "14px",
      "fontWeight": undefined,
      "height": "32px",
      "letterSpacing": "0.03em",
      "lineHeight": "2.285",
      "margin": "0",
      "padding": "0 1em",
      "textAlign": "center",
      "textShadow": "none",
      "transition": "all 0.5s linear 0ms",
      "whiteSpace": "no-wrap",
    }
  }>
  Click me
</button>
`;
